--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
           <h2>Contact Details</h2>
           <p class="lead">Contact me via Phone at: 07983 871201 </p>
           <p class="lead">Contact me via E-Mail at: Andrewhall95@hotmail.com </p>
+          <p class="lead">Contact me via GitHub at: https://github.com/Andrewhall2469/ </p>
 
 
 
